# optix-test-smallpt

./: CMakeLists.txt  ThreadUtils.h  glutils.cpp  glutils.h  maths.h  scene.cpp  scene.h  smallpt.cpp  vector.h
